@@ -118,7 +118,7 @@ extern ARCH_WORD DES_count;
 #define DES_STD_ALGORITHM_SIZE		"4K"
 #endif
 #define DES_STD_ALGORITHM_NAME \
-	DES_STD_ALGORITHM_BITS " " DES_STD_ALGORITHM_SIZE
+	"DES " DES_STD_ALGORITHM_BITS " " DES_STD_ALGORITHM_SIZE
 #endif
 
 /*
