@@ -9,7 +9,7 @@
 #include "formats.h"
 
 #define FORMAT_LABEL			"dummy"
-#define FORMAT_NAME			"dummy"
+#define FORMAT_NAME			""
 #define ALGORITHM_NAME			"N/A"
 
 #define BENCHMARK_COMMENT		""
