@@ -1,3 +1,8 @@
+The following changes have been made between John 1.7.9.12 and 1.7.9.13:
+
+* Mass rename of formats.
+* Assorted other changes.
+
 The following changes have been made between John 1.7.9.11 and 1.7.9.12:
 
 * The --fork=N option has been added.
@@ -324,4 +329,4 @@ Mac OS X (PowerPC and x86), SCO, BeOS.
 * Bug and portability fixes, and new bugs.
 * Bonus: "Strip" cracker included in the default john.conf (john.ini).
 
-$Owl: Owl/packages/john/john/doc/CHANGES,v 1.87 2013/04/30 11:36:34 solar Exp $
+$Owl: Owl/packages/john/john/doc/CHANGES,v 1.88 2013/05/06 07:26:35 solar Exp $
